fix(dialog): hide scrollbars when unnecessary

--- a/components/dialog/_spec.scss
+++ b/components/dialog/_spec.scss
@@ -167,7 +167,7 @@ $mdw-dialog__unit-width: dp(56) !default;
 }
 
 .mdw-dialog__scrolling {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .mdw-dialog__button-area {
